Bug 282636 - Process list is sorted too late after startup
Summary: Process list is sorted too late after startup
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: Process Controller - krunner part (other bugs)
Version First Reported In: 4.10.80
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-23 17:55 UTC by Nikos Chantziaras
Modified: 2014-04-20 22:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.8
Sentry Crash Report:


Attachments
Patch that should fix the issue (638 bytes, patch)
2013-09-20 00:07 UTC, Christoph Feck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikos Chantziaras 2011-09-23 17:55:46 UTC
Version:           unspecified (using KDE 4.7.1) 
OS:                Linux

When starting System Monitor, the process list is unsorted. It only gets sorted after the first timer tick. Waiting before sorting only makes sense when sorting by CPU load, where the load is not available before the fist tick. For all other types of sorting (name, username, memory, etc.) all data is available immediately, so the list should appear already sorted when starting up.

Reproducible: Always

Steps to Reproduce:
Press CTRL+ESC to show the process list.

Actual Results:  
When the window appears, the processes as not sorted.

Expected Results:  
The processes should appear already sorted.
Comment 1 Nikos Chantziaras 2012-04-22 15:16:38 UTC
Still there in 4.8.2.
Comment 2 Nikos Chantziaras 2012-08-14 20:26:38 UTC
Still there in 4.9.0.
Comment 3 Nikos Chantziaras 2012-11-24 05:45:10 UTC
Problem persists in KDE 4.9.3.
Comment 4 Christoph Feck 2013-09-20 00:07:28 UTC
Created attachment 82417 [details]
Patch that should fix the issue
Comment 5 Christoph Feck 2014-03-26 19:40:21 UTC
Git commit e9d34e89e248cf980ce4858e609cf4b5e58661a4 by Christoph Feck.
Committed on 26/03/2014 at 19:37.
Pushed by cfeck into branch 'KDE/4.11'.

Fix process list to start already sorted
FIXED-IN: 4.11.8
REVIEW: 113931

M  +2    -0    libs/ksysguard/processui/ksysguardprocesslist.cpp

http://commits.kde.org/kde-workspace/e9d34e89e248cf980ce4858e609cf4b5e58661a4
Comment 6 Christoph Feck 2014-04-20 22:52:19 UTC
Git commit 1908ec8f2e5b5753b10d5de273f7a44021a2d35a by Christoph Feck.
Committed on 20/04/2014 at 22:51.
Pushed by cfeck into branch 'master'.

Fix process list to start already sorted

REVIEW: 113931

M  +2    -0    processui/ksysguardprocesslist.cpp

http://commits.kde.org/libksysguard/1908ec8f2e5b5753b10d5de273f7a44021a2d35a