Fix process list to start already sorted

BUG: 282636
FIXED-IN: 4.11.8
REVIEW: 113931